<resources>
    <string name="app_name">NFC Reader</string>
    <string name="logoNfc">Logo</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="tLogin">Login</string>
    <string name="tag">Scan tag</string>
    <string name="Mnim">Search by NIM</string>
    <string name="Mname">Search by Name</string>
    <string name="event">Event Management</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textWelcome"> NFC READER - ATTENDANCE</string>
    <string name="hold_tag">Hold a tag against the back of your device</string>
    <string name="nim">NIM Mahasiswa</string>
    <string name="angkatan">Tahun Masuk</string>
    <string name="prodi">Prodi Mahasiswa</string>
    <string name="nama">Nama Mahasiswa</string>
    <string name="click">click</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="search">search</string>
</resources>
